--- a/script.ipynb
+++ b/script.ipynb
@@ -1964,7 +1964,7 @@
    "metadata": {},
    "source": [
     "Recomendations:\n",
-    "* The dataset was so explicit that had all the guns in the game, including some that were not used in any round. It would be more efficient to store in string names the guns and grenades that were used\n",
+    "* The dataset was so explicit that had all the guns in the game, including some that were not used in any round. It would be more efficient to store in string the names of the guns and grenades that were used\n",
     "* It is required to know about the game, some things would not be really clear to people without the game knowledge\n",
     "* Search for the variables that better predict the result in order to remove the ones that doesn't add to the models. That is to reduce complexity, time and computing energy"
    ]
